# qttest

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h
.github/workflows/: build.yml
